--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ resources/backup/delete_light.png
 resources/backup/edit - Copy.png
 resources/backup/edit_dark.png
 resources/backup/edit_light.png
+db/backup/account(old).db
